# chromatag

./: README.md
apriltags_original/: .gitignore  Makefile  apriltag_quad_thresh.c  g2d.c
cameraCalibration/: CMakeLists.txt  README.md  example_out_camera_data.xml
chromaTagGenerator/: .gitignore  README.md  robustChroma.py
chromaTagRealTime/: CMakeLists.txt  chromatag.cpp
chromaTagServer/: README.md  chromatagServer.cpp
chromaTagServer/apriltags/: apriltag.c  tag16h5.c  tag25h9.c  tag36h10.c
chromaTagServer/apriltags/common/: pnm.c
chromaTagServer/lib/: pnm2mat.hpp
comparison/: CMakeLists.txt  chromatag.cpp
comparison/apriltags/: tag36artoolkit.c
comparison/apriltags/common/: image_u8.h
comparison/lib/: rgb2lab.hpp
realtime/: .gitignore  Makefile  apriltag.cpp  chromatag.cpp
realtime/apriltags/: .gitignore  Makefile  apriltag_demo.c  tag36h11.c
realtime/apriltags/common/: image_u8.c
realtime/lib/: pnm2mat.hpp
server/: CMakeLists.txt  README.md  apriltag_demo  chromatagServer.cpp
server/apriltags/: tag25h7.c
server/cameraCalibration/: camera_calibration.cpp  default.xml
